tests/neg-custom-args/no-experimental/experimentalExperimental.scala
import scala.annotation.experimental

class MyExperimentalAnnot // error
  extends experimental // error
